# Maxima-Draconis

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: block-upstream-pr.yml  build-ci.yml  release.yml
.woodpecker/: build-linux.yaml  build-windows.yaml  notification.yaml
MaximaHelper/: Info.plist  build.sh
MaximaHelper/Sources/: main.swift
crates/maxima_bootstrap/: Cargo.toml
crates/maxima_cli/: Cargo.toml
crates/maxima_lib/: Cargo.toml
crates/maxima_native/: Cargo.toml  bindings.h
crates/maxima_proto/: Cargo.toml
crates/maxima_proto/examples/: auth_check.rs  client.rs  local_user.rs
crates/maxima_proto/examples/entry/: client_setup.rs  mod.rs
crates/maxima_proto/src/: lib.rs
crates/maxima_proto/src/comm/: client.rs  mod.rs  proto.rs  router.rs  server.rs
crates/maxima_proto/src/comp/: auth.rs  library.rs  mod.rs  users.rs  util.rs
crates/maxima_proto/src/models/: library.rs  user.rs
crates/maxima_resources/: Cargo.toml
crates/maxima_server/: Cargo.toml  build.rs
crates/maxima_service/: Cargo.toml
crates/maxima_tui/: Cargo.toml
crates/maxima_ui/: Cargo.toml
installer/: maxima-setup.nsi
maxima-bootstrap/src/: main.rs
maxima-cli/: Cargo.toml
maxima-cli/src/: main.rs
maxima-lib/: Cargo.toml  build.rs
maxima-lib/src/: lib.rs
maxima-tui/src/: main.rs
maxima-ui/: Cargo.toml
maxima-ui/src/: bridge_processor.rs  bridge_thread.rs  event_processor.rs  event_thread.rs  main.rs  translation_manager.rs  ui_image.rs
(+89 files in other folders)
