[workspace]
resolver = "2"
exclude = [ ".gitignore", ".github/*" ]
members = [ "crates/*" ]

[profile.release]
strip = true

[patch.crates-io]
flate2 = { git = 'https://github.com/ArmchairDevelopers/flate2-rs.git' }
async-compression = { git = 'https://github.com/ArmchairDevelopers/async-compression.git' }
